--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -31,8 +31,6 @@
     <url-pattern>/thirdMethod</url-pattern>
   </servlet-mapping>
   <servlet>
-    <description></description>
-    <display-name>WelcomeServlet</display-name>
     <servlet-name>WelcomeServlet</servlet-name>
     <servlet-class>nitin1.httpServlet.servletCollaboration.WelcomeServlet</servlet-class>
   </servlet>
@@ -40,4 +38,13 @@
     <servlet-name>WelcomeServlet</servlet-name>
     <url-pattern>/helloWorld</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>SelectDataServlet</servlet-name>
+    <servlet-class>nitin2.httpServlet.jdbcConn.SelectDataServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SelectDataServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
